Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40197

On OSX, scroll wheel generated by the momentum phase lose the current modifiers

XMLWordPrintable

    • macOS
    • b79ba9eade2e1b1a8607046ecbe61eba4f063e21

      With an Apple Magic Trackpad:

      1. Press a modifier such as the Option key
      2. Use the 2 finger gesture to produce scroll wheel events (either horizontally or vertically)
      3. Move fast enough and lift your fingers (flick it)

      At step 3, momentum generates new scroll wheel events after lifting your fingers.

      Between 2-3, we see the Option key modifier
      After step 3, we receive scroll wheel events with no modifier set.

      Impact: if using the modifier is supposed to produce a different effect,
      then flicking alternates from the intended effect back to the no-modifier case.

      Note: this does not happen with a regular scroll wheel mouse (such as a pc mouse) because momentum does not generate further scroll events

      qtbase/src/plugins/platforms/cocoa/qnsview.mm seems like a nice place to start with to investigate.

      With the app provided in attachment the output is:

      1. step 2
        qml: wheel: 67108864, QPoint(0, -1)
        qml: wheel: 67108864, QPoint(3, 0)
        qml: wheel: 67108864, QPoint(8, 1)
        qml: wheel: 67108864, QPoint(33, 1)
        qml: wheel: 67108864, QPoint(16, 0)
        qml: wheel: 67108864, QPoint(0, 0)
        qml: wheel: 67108864, QPoint(0, 0)
      2. step 3
        qml: wheel: 0, QPoint(29, 0)
        qml: wheel: 0, QPoint(33, 0)
        qml: wheel: 0, QPoint(34, 0)
        qml: wheel: 0, QPoint(33, 0)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            uucidl Nicolas Leveille
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes